# cpp-search-server

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
benchmarks/: CMakeLists.txt  benchmark_tests.hpp  generator.hpp  log_duration.cpp  log_duration.hpp  search_server_benchmarks.cpp  test_example_functions.cpp  test_example_functions.hpp
benchmarks/benchmarking/: CMakeLists.txt
benchmarks/benchmarking/include/benchmarking/: benchmarking.hpp  generator.hpp
benchmarks/benchmarking_main/: CMakeLists.txt
examples/src/: main.cpp  runner.cpp  runner.hpp
examples/use-fetch-content/: CMakeLists.txt  run_example.sh
examples/use-private-shared-library-as-proxy/: CMakeLists.txt  run_example.sh
examples/use-private-shared-library-as-proxy/private-shared-library-as-proxy/: CMakeLists.txt
examples/use-proxy-shared-library/: CMakeLists.txt  run_example.sh
examples/use-proxy-shared-library/proxy-shared-library/: CMakeLists.txt
examples/use-public-shared-library/: CMakeLists.txt  run_example.sh
examples/use-public-shared-library-as-proxy/: CMakeLists.txt  run_example.sh
examples/use-public-shared-library-as-proxy/public-shared-library-as-proxy/: CMakeLists.txt
examples/use-shared-library/: CMakeLists.txt  run_example.sh
examples/use-static-library/: CMakeLists.txt  run_example.sh
examples/use-subdirectory/: .gitignore  CMakeLists.txt  run_example.sh
extras/: .clang-format  CMakeLists.txt
extras/benchmarking/: CMakeLists.txt  log_duration.cpp
extras/benchmarking/include/benchmarking/: benchmarking.hpp  generator.hpp  log_duration.hpp
extras/benchmarking_main/: main.cpp
extras/runner/: CMakeLists.txt
extras/runner/include/runner/: runner.hpp
extras/testing/: CMakeLists.txt
extras/testing/include/testing/: assertions.hpp  testing.hpp
extras/testing/include/testing/details/: output.hpp
extras/testing_main/: CMakeLists.txt  main.cpp
include/search_server/: document.hpp  process_queries.hpp  search_server.hpp
include/search_server/details/: concurrent_map.hpp  search_server-inl.hpp  search_server.hpp.inc  string_processing.hpp
search-server/: benchmark_tests.h  borrowed_range.h  borrowed_range.hpp  concurrent_map.h  document.cpp  document.h  filter.h  flatten_container.h  flatten_container.hpp  late_init_value.h  log_duration.cpp  log_duration.h  main.cpp  owning_range.h  paginator.h  paginator.hpp  process_queries.cpp  process_queries.h  process_queries.hpp  read_input_functions.cpp  remove_duplicates.cpp  remove_duplicates.h  remove_duplicates.hpp  request_queue.cpp  request_queue.h  request_queue.hpp  search_server.cpp  search_server.h  string_processing.cpp  string_processing.h  test_example_functions.cpp  test_example_functions.h  uninitialized_value.h  unit_test_tools.h  unit_tests.h
src/: CMakeLists.txt  concurrent_map.hpp  document.cpp  process_queries.cpp  read_input_functions.cpp  read_input_functions.hpp  remove_duplicates.cpp  search_server.cpp  string_processing.cpp  string_processing.hpp
src/runner/: CMakeLists.txt
src/runner/include/runner/: runner.hpp
src/search-server/: CMakeLists.txt  document.cpp
tests/: CMakeLists.txt  main.cpp  search_server_tests.cpp  unit_test_tools.hpp  unit_tests.hpp
tests/testing/: CMakeLists.txt
tests/testing/include/testing/: runner.hpp  testing.hpp
tests/testing/include/testing/details/: assertions.hpp  output.hpp  runner.hpp
tests/testing/src/: CMakeLists.txt  runner.cpp
tests/testing_main/: CMakeLists.txt  main.cpp
